Fix image cropping layout issue on public share page

--- a/YourWorld/static/css/editor.css
+++ b/YourWorld/static/css/editor.css
@@ -1086,6 +1086,7 @@ button:active:not(:disabled) {
 }
 
 .public-page {
+  position: relative;
   max-height: 62vh;
   overflow-y: auto;
   padding-right: 10px;
